# esp8266-dashboard

./: main.py  mqtt_client.py  pyproject.toml  requirements.txt  simulation.py
static/: manifest.json  sw.js
templates/: dashboard.html  preview_dashboard.html
